Assets/CSS/style.css
@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');

*,
*::after,
*::before {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: 'Inter', sans-serif;
}

/* Navbar */
.navbar input[type="checkbox"],
.navbar .hamburger-lines {
  display: none;
}

.container {
  margin-left: 10%;
  margin-right: 10%;
}

.navbar {
  box-shadow: 0px 3px 5px 0px #aaa;
  position: fixed;
  width: 100%;
  background: #fff;
  color: #000;
  z-index: 100;
}

.navbar-container {
  display: flex;
  justify-content: space-between;
  height: 64px;
  align-items: center;
}

.menu-items {
  order: 2;
  display: flex;
}

.logo {
  order: 1;
  font-size: 2.3rem;
}

.menu-items li {
  list-style: none;
  margin-left: 1.5rem;
  font-size: 1rem;
}

.navbar a {
  color: #444;
  text-decoration: none;
  font-weight: 500;
  transition: color 0.3s ease-in-out;
}

.navbar a:hover {
  color: #ef1d26;
}

@media (max-width: 768px) {
  .navbar {
    opacity: 0.95;
  }

  .navbar-container input[type="checkbox"],
  .navbar-container .hamburger-lines {
    display: block;
  }

  .navbar-container {
    display: block;
    position: relative;
    height: 64px;
  }

  .navbar-container input[type="checkbox"] {
    position: absolute;
    display: block;
    height: 32px;
    width: 30px;
    top: 20px;
    left: 20px;
    z-index: 5;
    opacity: 0;
    cursor: pointer;
  }

  .navbar-container .hamburger-lines {
    display: block;
    height: 28px;
    width: 35px;
    position: absolute;
    top: 20px;
    left: 20px;
    z-index: 2;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .navbar-container .hamburger-lines .line {
    display: block;
    height: 4px;
    width: 100%;
    border-radius: 10px;
    background: #333;
  }

  .navbar-container .hamburger-lines .line1 {
    transform-origin: 0% 0%;
    transition: transform 0.3s ease-in-out;
  }

  .navbar-container .hamburger-lines .line2 {
    transition: transform 0.2s ease-in-out;
  }

  .navbar-container .hamburger-lines .line3 {
    transform-origin: 0% 100%;
    transition: transform 0.3s ease-in-out;
  }

  .navbar .menu-items {
    padding-top: 100px;
    background: #fff;
    height: 100vh;
    max-width: 300px;
    transform: translate(-150%);
    display: flex;
    flex-direction: column;
    margin-left: -40px;
    padding-left: 40px;
    transition: transform 0.5s ease-in-out;
    box-shadow: 5px 0px 10px 0px #aaa;
    overflow: scroll;
  }

  .navbar .menu-items li {
    margin-bottom: 1.8rem;
    font-size: 1.1rem;
    font-weight: 500;
  }

  .logo {
    position: absolute;
    top: 10px;
    right: 15px;
    font-size: 2.5rem;
  }

  .navbar-container input[type="checkbox"]:checked ~ .menu-items {
    transform: translateX(0);
  }

  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
    transform: rotate(45deg);
  }

  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
    transform: scaleY(0);
  }

  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
    transform: rotate(-45deg);
  }
}

@media (max-width: 500px) {
  .navbar-container input[type="checkbox"]:checked ~ .logo {
    display: none;
  }
}

/* Footer */
footer {
  background-color: #000;
  color: white;
  display: flex;
  flex-direction: row;
  padding: 10%;
  gap: 12%;
}

@media (max-width: 768px) {
  footer {
    background-color: #000;
    color: white;
    display: flex;
    flex-direction: column;
    padding: 10%;
    gap: 12%;
  }

  .line {
    display: none;
  }
}

.copyright {
  background-color: #000;
  color: white;
  display: flex;
  justify-content: center;
  padding-bottom: 3%;
  font-size: large;
}

/* Main Section */
.top-card-container {
  padding-top: 8%;
  padding-bottom: 4%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  gap: 28px;
  margin-right: 10%;
  margin-left: 10%;
}

.top-card {
  border: 2px solid;
  height: 20rem;
  width: 14rem;
  text-align: center;
}

@media (max-width: 768px) {
  .top-card-container {
    padding-top: 8%;
    padding-bottom: 4%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 28px;
    margin-right: 10%;
    margin-left: 10%;
  }

  .top-card {
    border: 2px solid;
    height: 20rem;
    width: 14rem;
    text-align: center;
  }
}

/* KPFF */
.kpff {
  background-color: #3c6771;
  width: 100%;
  height: 950px;
  padding-right: 10%;
  padding-left: 10%;
  padding-top: 8%;
}

.main-img {
  height: 700px;
  width: 550px;
}

.main-container-card {
  display: flex;
  flex-direction: row;
}

.sub-container-card-text-kpff {
  background-color: #9aafa8;
  padding: 3.5rem;
  padding-top: 12%;
}

.card-text-banner-header {
  font-size: 260%;
  font-weight: bold;
  padding-bottom: 2%;
}

.card-text-banner {
  padding-top: 6%;
  line-height: 1.6;
}

@media (max-width: 768px) {
  .kpff {
    background-color: #3c6771;
    width: 100%;
    height: 950px;
    padding-right: 10%;
    padding-left: 10%;
    padding-top: 8%;
  }

  .main-img {
    height: 700px;
    width: 550px;
  }

  .main-container-card {
    display: flex;
    flex-direction: column;
  }

  .sub-container-card-text-kpff {
    background-color: #9aafa8;
    padding: 3.5rem;
    padding-top: 12%;
  }
}

/* SCREENINGS */
.screenings {
  background-color: white;
  width: 100%;
  height: 950px;
  padding-right: 10%;
  padding-left: 10%;
  padding-top: 8%;
}

.main-container-card {
  display: flex;
  flex-direction: row;
}

/* Little Cinema */
.little-cinema {
  background-color: #b6b585;
  width: 100%;
  height: 950px;
  padding-right: 10%;
  padding-left: 10%;
  padding-top: 8%;
}

.main-container-card {
  display: flex;
  flex-direction: row;
}

.sub-container-card-text-lc {
  background-color: #a8a78b;
  padding: 3.5rem;
  padding-top: 12%;
}
/* Frames of Freedom */
.fof {
  background-color: white;
  width: 100%;
  height: 950px;
  padding-right: 10%;
  padding-left: 10%;
  padding-top: 8%;
}

.main-container-card {
  display: flex;
  flex-direction: row;
}

.sub-container-card-text {
  background-color: #9aafa8;
  padding: 3.5rem;
  padding-top: 12%;
}

/* Stories */
.stories {
  background-color: #813928;
  width: 100%;
  height: 950px;
  padding-right: 10%;
  padding-left: 10%;
  padding-top: 8%;
  margin-bottom: 8%;
}

.main-container-card {
  display: flex;
  flex-direction: row;
}

/* Back to top button */
#btn-back-to-top {
  position: fixed;
  bottom: 55px;
  right: 35px;
  display: none;
  border-radius: 50%;
  width: 50px;
  height: 50px;
  cursor: pointer;
}

/* Location */
.main-location {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-top: 10%;
  padding-bottom: 6%;
  background-color: #ececf1;
  gap: 5%;
}

@media (max-width: 768px) {
  .main-location {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-top: 10%;
    padding-bottom: 10%;
    background-color: #ececf1;
    gap: 5%;
  }

  .map {
    height: 200px;
    width: 100%;
  }
}

/* In the news */
.inthenews-card {
  display: flex;
  flex-direction: row;
  margin-left: 10%;
  margin-right: 10%;
  gap: 20%;
  margin-bottom: 4%;
}

.img-inthenews {
  width: 31.25rem;
  height: 18.75rem;
}

@media (max-width: 768px) {
  .inthenews-card {
    display: flex;
    flex-direction: column;
    margin-left: 10%;
    margin-right: 10%;
    gap: 20%;
    margin-bottom: 4%;
  }

  .img-inthenews {
    width: 330px;
    height: 200px;
  }

  .main-container-inthenews {
    background-color: #f1f1f1;
    margin-bottom: 5%;
  }
}

.main-container-inthenews {
  background-color: #f1f1f1;
}

